--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   hummingbot:
     container_name: hummingbot
-    image: hummingbot/hummingbot:latest
-    # build: # Uncomment this build section and comment image to build Hummingbot locally
-    #   context: .
-    #   dockerfile: Dockerfile
+    image: hummingbot-local
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - ./conf:/home/hummingbot/conf
       - ./conf/connectors:/home/hummingbot/conf/connectors
@@ -24,21 +24,24 @@ services:
     tty: true
     stdin_open: true
     network_mode: host
+    depends_on:
+      - gateway
   #  environment:
   #    - CONFIG_PASSWORD=admin
   #    - CONFIG_FILE_NAME=v2_with_controllers.py
   #    - SCRIPT_CONFIG=conf_v2_with_controllers.yml
 
-  # gateway:
-  #  restart: always
-  #  container_name: gateway
-  #  image: hummingbot/gateway:latest
-  #  ports:
-  #    - "15888:15888"
-  #  volumes:
-  #    - "./gateway-files/conf:/home/gateway/conf"
-  #    - "./gateway-files/logs:/home/gateway/logs"
-  #    - "./certs:/home/gateway/certs"
-  #  environment:
-  #    - GATEWAY_PASSPHRASE=admin
-  #    - DEV=true
+  gateway:
+    restart: always
+    container_name: gateway
+    image: hummingbot/gateway:dedust-ton
+    ports:
+      - "15888:15888"
+    volumes:
+      - ../gateway/conf:/home/gateway/conf
+      - ../gateway/logs:/home/gateway/logs
+      - ./certs:/home/gateway/certs
+    environment:
+      - GATEWAY_PASSPHRASE=admin
+      - DEV=true
+    network_mode: host
