--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -26,10 +26,10 @@ dependencies:
   - bidict>=0.22.1
   - bip-utils
   - cachetools>=5.3.1
-  - commlib-py>=0.11
+  - commlib-py==0.11.5
   - cryptography>=41.0.2
   - eth-account>=0.13.0
-#  - injective-py==1.12.*
+  #  - injective-py==1.12.*
   - libta-lib>=0.6.4
   - msgpack-python
   - numba>=0.61.2
@@ -63,4 +63,4 @@ dependencies:
   - yaml>=0.2.5
   - zlib>=1.2.13
   - pip:
-    - injective-py==1.12.*
+      - injective-py==1.12.*
