--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   gateway:
     restart: always
     container_name: gateway
-    image: hummingbot/gateway:dedust-ton
+    image: stepandra/hummingbot-gateway-ton:latest
     ports:
       - "15888:15888"
     volumes:
